--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,101 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Naility
+			{% endblock %}
+		</title>
+		{% block stylesheets %}
+			<link rel="stylesheet" href="{{asset ('CSS/bootstrap.min.css')}}"/>
+		{% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+	</head>
+	<body>
+		{# Header du site avec une navbar Offcanvas avec comme objectif d'avoir plus de place notamment sur les mobiles #}
+
+		<nav class="navbar navbar-dark bg-dark fixed-top">
+
+			<div class="container-fluid d-flex">
+				<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<a class="navbar-brand col-3" href="{{path ('home')}}">
+					<img src="{{ asset('/Images/logo.png')| imagine_filter('header_logo')}}" alt="Logo Naility"/>
+				</a>
+				<a class="navbar-brand" href="{{path ('cart')}}">
+					<img src="{{ asset('/Images/shopping-cart.png')| imagine_filter('header_cart_logo')}}" alt="Logo panier shopping"/>
+				</a>
+				<div class="offcanvas offcanvas-start bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+					<div class="offcanvas-header justify-content-center">
+						<h4 class="offcanvas-title text-success " id="offcanvasDarkNavbarLabel">Menu</h4>
+						<button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+					</div>
+					<div class="offcanvas-body fs-5 fw-bold">
+						<ul class="navbar-nav justify-content-start flex-grow-1">
+							<li class="nav-item">
+								<a class="nav-link" aria-current="page" href="#">Accueil</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Vernis semi-permanents</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Gels techniques</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Bases</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Finitions</a>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-auto-close="false" data-bs-toggle="dropdown" aria-expanded="false">
+									Matériels électriques
+								</a>
+								<ul class="dropdown-menu dropdown-menu-dark">
+									<li>
+										<a class="dropdown-item fs-5 fw-bold" href="#">Lampes</a>
+									</li>
+									<li>
+										<a class="dropdown-item fs-5 fw-bold" href="#">Ponceuses</a>
+									</li>
+
+								</ul>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-auto-close="false" data-bs-toggle="dropdown" aria-expanded="false">
+									Accessoires et consommables
+								</a>
+								<ul class="dropdown-menu dropdown-menu-dark">
+									<li>
+										<a class="dropdown-item fs-5 fw-bold" href="#">Liquides</a>
+									</li>
+									<li>
+										<a class="dropdown-item fs-5 fw-bold" href="#">Limes</a>
+									</li>
+									<li>
+										<a class="dropdown-item fs-5 fw-bold" href="#">Pinceaux</a>
+									</li>
+
+								</ul>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Nous contacter</a>
+							</li>
+
+
+						</ul>
+
+						<form class="d-flex" role="search">
+							<input class="form-control me-2" type="search" placeholder="Vous chercher un produit?" aria-label="Search">
+							<button class="btn btn-outline-success" type="submit">Rechercher</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</nav>
+
+		{% block body %}{% endblock %}
+		<script src="{{asset ('JS/bootstrap.bundle.min.js')}}"></script>
+	</body>
 </html>
