--- a/public/CSS/homepage.css
+++ b/public/CSS/homepage.css
@@ -1,15 +1,17 @@
+.carousel-slide{
+    height: 32rem;
+    width: 100%;
+}
 .carousel-item {
-    height: 100vh;
-    min-height: 400px;
-    background: no-repeat scroll center scroll;
-    -webkit-background: cover;
-    background-size: cover;
+    height: 32rem;
             }
 
 .carousel-item img {
-    height: 100vh;
-    min-height: 400px;
-    margin-top: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 32rem;
 
         }
 
@@ -22,14 +24,20 @@
     right: 0;
     bottom: 0;
     background: black;
-    opacity: 0.1;
+    opacity: 0.2;
 }
 
-.carousel-item p {
-    margin-bottom: 30vh;
-    font-style: italic;
-    color: rgb(0, 255, 13);
-    font-size: large;
+.carousel-caption p{
     align-items: center;
-
+    color:blue;
+    font-style: italic;
+    font-size: large;
+  
 }
+
+.carousel-item h5{
+    color:red;
+    font-size: xx-large;
+    font-style: italic;
+}
+
