--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -25,37 +25,45 @@
 				<div class="carousel-caption">
 					<h5>Bienvevue chez Naility</h5>
 					<p>Naility est une marque française créé depuis 2009. Notre expertise dans l'onglerie .....
-
-						<a href="{{path('shop')}}">
-							<button class="btn btn-dark fw-bold border border-dark">
-								Venez découvrir nos produits</button>
-						</a>
 						<span>
-							Suivez nous sur nos réseaux</span>
+							<a href="{{path('shop')}}">
+								<button class="btn btn-success fw-bold border border-dark rounded-pill">
+									Venez découvrir nos produits</button>
+							</a>
+						</span>
 					</p>
-
-
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img src="{{ asset('/Images/Gel_FiberWhite.jpg')}}" class="d-block w-100" alt="...">
 				<div class="carousel-caption">
-					<h5>Second slide label</h5>
-					<p>Some representative placeholder content for the second slide.
-						<button class="btn btn-dark fw-bold border border-dark" href="#">
-							Venez découvrir nos produits
-						</button>
+					<h5>
+						<span class="instagram">
+							<a href="#" class="href">
+								<i class="fa-brands fa-instagram fa-4x fa-flip" style="color:purple"></i>
+							</a>
+						</span>
+						<span class="facebook">
+							<a href="#" class="href">
+								<i class="fa-brands fa-facebook-f fa-4x fa-bounce" style="color:blue"></i>
+							</a>
+						</span>
+					</h5>
+					<p class="text-center">Vous voulez être au courant des dernières nouveautés? Suivez nous sur nos réseaux sociaux
+
 					</p>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img src="{{ asset('/Images/177_SparkleShine.jpg')}}" class="d-block w-100" alt="...">
 				<div class="carousel-caption">
-					<h5>Third slide label</h5>
-					<p>Some representative placeholder content for the third slide.
-						<button class="btn btn-dark fw-bold border border-dark" href="#">
-							Venez découvrir nos produits
+					<h5>
+						<button class="btn btn-success fw-bold border border-dark rounded-pill" href="#">
+							Nouveautés
 						</button>
+					</h5>
+					<p>Some representative placeholder content for the third slide.
+
 					</p>
 				</div>
 			</div>
