--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,7 +37,7 @@
 								<a class="nav-link" aria-current="page" href="{{path ('home')}}">Accueil</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Vernis semi-permanents</a>
+								<a class="nav-link" href="{{path('category_shop',{category:'vernis-semi-permanents'})}}">Vernis semi-permanents</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">Gels techniques</a>
