--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -21,7 +21,7 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="{{ asset('/Images/130_SexyRed_cut.png')}}" class="d-block w-100" alt="...">
+				<img src="{{ asset('/Images/kristina-paukshtite-704815.jpg')}}" class="d-block w-100" alt="...">
 				<div class="carousel-caption">
 					<h5>Bienvevue chez Naility</h5>
 					<p>Naility est une marque française créé depuis 2009. Notre expertise dans l'onglerie .....
@@ -35,7 +35,7 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="{{ asset('/Images/Gel_FiberWhite.jpg')}}" class="d-block w-100" alt="...">
+				<img src="{{ asset('/Images/lisa-fotios-851219.jpg')}}" class="d-block w-100" alt="...">
 				<div class="carousel-caption">
 					<h5>
 						<span class="instagram">
