--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+
 {% block title %}Naility
 {% endblock %}
 {% block stylesheets %}
@@ -7,6 +8,9 @@
 	<link rel="stylesheet" href="{{asset ('CSS/bootstrap.min.css')}}"/>
 
 {% endblock %}
+
+{# {% block Search %}
+	{{form (searchForm)}}{% endblock %}#}
 
 {% block body %}
 
@@ -17,7 +21,6 @@
 		<div class="carousel-indicators">
 			<button type="button" data-bs-target="#HomepagecarouselCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 			<button type="button" data-bs-target="#HomepagecarouselCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-			<button type="button" data-bs-target="#HomepagecarouselCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
@@ -54,19 +57,6 @@
 					</p>
 				</div>
 			</div>
-			<div class="carousel-item">
-				<img src="{{ asset('/Images/177_SparkleShine.jpg')}}" class="d-block w-100" alt="...">
-				<div class="carousel-caption">
-					<h5>
-						<button class="btn btn-success fw-bold border border-dark rounded-pill" href="#">
-							Nouveautés
-						</button>
-					</h5>
-					<p>Some representative placeholder content for the third slide.
-
-					</p>
-				</div>
-			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#HomepagecarouselCaptions" data-bs-slide="prev">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -77,4 +67,13 @@
 			<span class="visually-hidden">Next</span>
 		</button>
 	</div>
+	<h3 class="text-center mt-2">
+		Nos nouveautés
+		<p>{% include "/homepage/newProducts.html.twig" %}
+		</p>
+	</h3>
+	<h3 class="text-center">
+		Nos meilleures ventes
+		<p class="mt-1">{% include "/homepage/bestSellers.html.twig" %}</p>
+	</h3>
 {% endblock %}
